Improved API for rating and blocking workers
- ratings can be posted straight on a Worker's Shift
- rating is checked to be within 1-5 range
- proper error reply when a Worker was already blocked
- introduced `Status` management response type to capture errors
- proper Open API schema matching changes
