# src/rest/v1/openapi.yml
@@ -132,16 +132,25 @@ components:
     RateWorkerInput:
       type: object
       properties:
+        rating:
+          type: integer
+      required:
+        - rating
+    BlockedWorker:
+      type: object
+      properties:
         shiftUuid:
           type: string
         workerUuid:
           type: string
-        rating:
-          type: integer
-      required:
-        - shiftUuid
-        - workerUuid
-        - rating
+        facilityUuid:
+          type: string
+        blockReason:
+          type: string
+        worker:
+          $ref: '#/components/schemas/Worker'
+        facility:
+          $ref: '#/components/schemas/HealthCareFacility'
     BlockWorkerInput:
       type: object
       properties:
@@ -155,13 +164,13 @@ components:
         - shiftUuid
         - workerUuid
         - blockReason
-    GenericSuccessResponse:
+    GenericError:
       type: object
       properties:
-        status:
+        error:
           type: string
       required:
-        - status
+        - error
 paths:
   /:
     summary: The application health check
@@ -294,7 +303,7 @@ paths:
                   shiftAssignments:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Shift'
+                      $ref: '#/components/schemas/ShiftAssignment'
     post:
       requestBody:
         content:
@@ -308,6 +317,37 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ShiftAssignment'
+  /workers/{workerUuid}/shifts/{shiftUuid}/rate:
+    parameters:
+      - name: workerUuid
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: shiftUuid
+        in: path
+        required: true
+        schema:
+          type: string
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RateWorkerInput'
+      responses:
+        '200':
+          description: Successfully rated a Worker for a Shift
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShiftAssignment'
+        '400':
+          description: Couldn't apply rating to the Worker in a Shift
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericError'
   /shifts:
     get:
       responses:
@@ -322,20 +362,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Shift'
-  /rate-worker:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RateWorkerInput'
-      responses:
-        '200':
-          description: Successfully rated a Worker for a Shift
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ShiftAssignment'
   /block-worker:
     post:
       requestBody:
@@ -349,4 +375,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GenericSuccessResponse'
+                $ref: '#/components/schemas/BlockedWorker'
+        '400':
+          description: Couldn't block worker
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GenericError'
